fixed issue with alignment

--- a/master.css
+++ b/master.css
@@ -72,33 +72,20 @@ p {
 /* ===========================================================================*/
 .header {
   border-left: 4px solid;
-  margin-top: 80px;
-  padding: 2%;
+  margin-top: 25px;
 }
 
 /* ===========================================================================*/
 /* FOREGROUND BODY */
 /* ===========================================================================*/
-.main-body .header {
-  margin-top: 25px;
-}
-
 .main-body {
-  /* background-color: white; */
   margin-top: 20px;
-  /* box-shadow: 0px 0px 20px black; */
   height: 100%;
 }
 
 .whole-page {
   max-width: 100%;
   height: 90%;
-}
-
-.body-content {
-  margin: 0px;
-  padding: 0px;
-  /* border-left: 4px solid black; */
 }
 
 /* ===========================================================================*/
@@ -130,13 +117,11 @@ p {
 }
 
 .project-card{
-  /* background-color: var(--lightGrey); */
   color: white;
   text-shadow: 1px 1px 4px black;
   border-left: 4px solid black;
   height: 400px;
   margin-top: 20px;
-  /* box-shadow: 0px 0px 10px black; */
   padding: 5px;
 }
 
